--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
     <script>
         // Array of sentences you want to display randomly
         const sentences = [
-            "Learning a new word every day is a great way to improve your vocabulary.",
-            "Programming is a fun skill to learn and a powerful tool for problem solving.",
-            "Consistency is the key to mastering any new skill.",
-            "Reading a variety of books can expand your horizons.",
-            "The more you practice, the better you get at it.",
-            "Challenge yourself with something new every day.",
-            "Success is the sum of small efforts, repeated day in and day out.",
-            "The journey of a thousand miles begins with one step.",
-            "Hard work beats talent when talent doesn't work hard."
+            "agile project management- Approach in project management where the customer gets value from the project sooner because the project is completed in iterations.",
+            "brainstorming- Free flow of ideas to identify possible project strategies.",
+            "goal- End result of the project; drives all aspects of the project.",
+            "project management- Applying knowledge, skills, tools, and techniques to achieve a project’s objectives.",
+            "project management life cycle- Defined by the Project Management Institute; included initiating, planning, executing, monitoring, and controlling and the closing process.",
+            "project scope- Approach you choose and the success criteria you have to meet.",
+            "quality objective- Goals for the project that establish how good the project’s end results must be.",
+            "traditional project management-When each project management process group occurs one after another; also known as the waterfall approach.",
+            "stakeholder- Anyone who has an interest or stake in the outcome of a project."
         ];
 
         // Function to get a random sentence from the array
